[package]
name = "mrlog"
version = "0.2.1"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"
repository = "https://github.com/markbenvenuto/mrlog"
license = "Apache-2.0"
description = "Converts MongoDB 4.4 log format to MongoDB 4.2 and prior style text logs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
regex = "1.7.1"
lazy-regex = "2.4.1"

structopt = "0.3.26"

anyhow = { version ="1.0.68", features = ["backtrace"] }

colored = "2.0.0"

crossbeam-channel="0.5.8"

cpp_demangle = "0.4.0"

nix = "0.26.2"
# Handle SIGTERM and SIGINT
ctrlc = { version = "3.2.4", default-features = false, features = ["termination"] }

[target.'cfg(target_os = "windows")'.dependencies]
winapi="0.3.9"


[target.'cfg(target_os = "linux")'.dependencies]
object={ version = "0.30.3", default-features = false, features = ["read", "compression"] }

addr2line="0.19.0"
memmap2 = "0.5.8"
gimli = { version = "0.27.1", default-features = false, features = ["read"] }

# rental = "0.5.5"
ouroboros = "0.15.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

